; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_DRV2605L.c_DRV_write.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_DRV2605L.c_DRV_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV2605L_transfer_buffer = common dso_local global i32* null, align 8
@DRV2605L_BASE_ADDRESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DRV_write(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32*, i32** @DRV2605L_transfer_buffer, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** @DRV2605L_transfer_buffer, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @DRV2605L_BASE_ADDRESS, align 4
  %12 = shl i32 %11, 1
  %13 = load i32*, i32** @DRV2605L_transfer_buffer, align 8
  %14 = call i32 @i2c_transmit(i32 %12, i32* %13, i32 2, i32 100)
  ret void
}

declare dso_local i32 @i2c_transmit(i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
